kubernetes-dashboard/oldingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubernetes-dashboard
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
  namespace: kube-system
spec:
  rules:
  - http:
      paths:
      - path: /k8sdash
        backend:
          serviceName: kubernetes-dashboard
          servicePort: web
  tls:
   - secretName: kubernetes-dashboard-certs
